--- a/index.html
+++ b/index.html
@@ -40,13 +40,18 @@
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
           <li><a href="https://education.github.com/git-cheat-sheet-education.pdf">Git Cheat Sheet</a></li>
           <li><a href="https://digital.gov/resources/an-introduction-github/">Introduction to GitHub</a></li>
+          <li><a href="https://courses.bootcampspot.com/courses/1430/pages/3-dot-4-5-complete-the-git-flow?module_item_id=552409">Completing the Git flow</a></li>
         </ul>
       </section>
    
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-         <li>Enter your JavaScript notes here</li>
+         <li><a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics">JavaScript Basics Documentation</a></li>
+         <li><a href="https://www.codecademy.com/resources/blog/your-guide-to-semicolons-in-javascript/">Semi-colons in JavaScript</a></li>
+         <li>A variable is a named container that allows us to store data in our code.</li>
+         <li>Control flow is the order in which a computer executes code in a script.</li>
+         <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math">JavaScript: Math</a></li>
         </ul>
       </section>
     </main>
